objects/ESNStream__c.object
<CustomObject>
    <description>Streams management for Project Management.</description>
    <fields>
        <fullName>Contributor1EmailStream__c</fullName>
        <label>Contributor # 1 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contributor2EmailStream__c</fullName>
        <label>Contributor # 2 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ESN_ActualDeadline__c</fullName>
        <label>Actual Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESN_ActualEndDate__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESN_ActualStartDate__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESN_AtRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this project plan presents a risk.</description>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a milestone is completed or not.
Used by reporting.</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_PlannedDeadline__c</fullName>
        <description>Deadline of the milestone</description>
        <label>Planned Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESN_SituationText__c</fullName>
        <formula>IF(
	RecordType.DeveloperName == &quot;ESN_Milestone&quot;,
	IF(
		ESN_Completed__c == true,
		&quot;Closed&quot;,
		IF(
			ESN_AtRisk__c == true,
			&quot;At Risk&quot;,
			IF(
				ESN_ActualDeadline__c &lt; today(),
				&quot;Late&quot;,
				&quot;Planned&quot;
			)
		)
	),
	IF(
		ISPICKVAL(Status__c, &quot;Closed&quot;),
		&quot;Closed&quot;,
		IF(
			ESN_AtRisk__c == true,
			&quot;At Risk&quot;,
			IF(
				ESN_ActualStartDate__c &gt; today(),
				IF(
					ISPICKVAL(Status__c, &quot;Open&quot;),
					&quot;In Progress&quot;,
					&quot;Not Started&quot;
				),
				IF(
					today() &lt; ESN_ActualEndDate__c,
					IF(
						ISPICKVAL(Status__c, &quot;Open&quot;),
						&quot;In Progress&quot;,
						&quot;Late Start&quot;
					),
					&quot;Late&quot;
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situation Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_TECH_CurrentLeader__c</fullName>
        <description>This field display &quot;1&quot; if the current user is the stream owner, &quot;0&quot; if not.
Used for the view &quot;my_milestone&quot; and &quot;my_stream&quot;</description>
        <formula>IF( StreamLeader__c = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_CurrentLeader</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESN_Type__c</fullName>
        <formula>CASE(RecordType.DeveloperName ,
&quot;ESN_Stream&quot;, IMAGE(&apos;https://cdn1.iconfinder.com/data/icons/ecommerce-and-business-icon-set/32/project-plan.png&apos;,&quot;Stream&quot;,24,24),
&quot;ESN_Milestone&quot;, IMAGE(&apos;https://cdn1.iconfinder.com/data/icons/fatcow/32/milestone.png&apos;,&quot;Milestone&quot;,24,24),
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElapsedTime__c</fullName>
        <formula>today() -  StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Planned End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedDuration__c</fullName>
        <formula>EndDate__c  -  StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentStream__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent stream</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>ESNStream__c.Project__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ESNStream__c</referenceTo>
        <relationshipLabel>Child Streams</relationshipLabel>
        <relationshipName>Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectManagerEmailStream__c</fullName>
        <label>Project manager email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>ESNProject__c</referenceTo>
        <relationshipLabel>Streams</relationshipLabel>
        <relationshipName>Streams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>STR_Day_of_the_end_date__c</fullName>
        <formula>CASE( MOD(  ESN_ActualEndDate__c - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <label>Day of the end date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STR_Day_of_the_start_date__c</fullName>
        <description>Technical field used by the workflow to schedule alerts on business days only.</description>
        <formula>CASE( MOD(   ESN_ActualStartDate__c - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <label>Day of the start date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STR_Description__c</fullName>
        <description>Used to store information related to the stream of a project.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STR_Workflow_After_End_Date_1D__c</fullName>
        <description>Technical Field used to schedule alerts on business days only.</description>
        <formula>CASE( STR_Day_of_the_end_date__c ,
&quot;Monday&quot;,  ESN_ActualEndDate__c+1 ,
&quot;Tuesday&quot;,ESN_ActualEndDate__c+1,
&quot;Wednesday&quot;,ESN_ActualEndDate__c+1,
&quot;Thursday&quot;,ESN_ActualEndDate__c+1,
&quot;Friday&quot;,ESN_ActualEndDate__c+3,
&quot;Saturday&quot;,ESN_ActualEndDate__c+2,
&quot;Sunday&quot;,ESN_ActualEndDate__c+1,
ESN_ActualEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workflow After End Date 1D</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STR_Workflow_After_Start_Date_1D__c</fullName>
        <description>Technical Field used to schedule alerts on business days only.</description>
        <formula>CASE( STR_Day_of_the_start_date__c ,
&quot;Monday&quot;, ESN_ActualStartDate__c+1 ,
&quot;Tuesday&quot;,ESN_ActualStartDate__c+1,
&quot;Wednesday&quot;,ESN_ActualStartDate__c+1,
&quot;Thursday&quot;,ESN_ActualStartDate__c+1,
&quot;Friday&quot;,ESN_ActualStartDate__c+3,
&quot;Saturday&quot;,ESN_ActualStartDate__c+3,
&quot;Sunday&quot;,ESN_ActualStartDate__c+1,
ESN_ActualStartDate__c)</formula>
        <label>Workflow After Start Date 1D</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STR_Workflow_Start_Date__c</fullName>
        <description>Technical Field used to schedule alerts on business days only.</description>
        <formula>CASE( STR_Day_of_the_start_date__c ,
&quot;Monday&quot;, ESN_ActualStartDate__c-5 ,
&quot;Tuesday&quot;,ESN_ActualStartDate__c-4,
&quot;Wednesday&quot;,ESN_ActualStartDate__c-5,
&quot;Thursday&quot;,ESN_ActualStartDate__c-3,
&quot;Friday&quot;,ESN_ActualStartDate__c-3,
&quot;Saturday&quot;,ESN_ActualStartDate__c-3,
&quot;Sunday&quot;,ESN_ActualStartDate__c-4,
ESN_ActualStartDate__c)</formula>
        <label>Workflow Before Start Date 3D</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Situation__c</fullName>
        <formula>IF(
	RecordType.DeveloperName == &quot;ESN_Milestone&quot;,
	IF(
		ESN_Completed__c == true,
		IMAGE(&apos;/resource/ProjectTab_Closed&apos;,&apos;Closed : Stream closed&apos;),
		IF(
			ESN_AtRisk__c == true,
			IMAGE(&apos;/resource/ProjectTab_Risk&apos;,&apos;Risk : the stream is identified as presenting a risk&apos;),
			IF(
				ESN_ActualDeadline__c &lt; today(),
				IMAGE(&apos;/resource/ProjectTab_Risk&apos;,&apos;Risk : the stream is identified as presenting a risk&apos;),
				IMAGE(&apos;/resource/1368629827000/ProjectTab_InProgress&apos;,&apos;Stream in progress&apos;)
			)
		)
	),
	IF(
		ISPICKVAL(Status__c, &quot;Closed&quot;),
		IMAGE(&apos;/resource/ProjectTab_Closed&apos;,&apos;Closed : Stream closed&apos;),
		IF(
			ESN_AtRisk__c == true,
			IMAGE(&apos;/resource/ProjectTab_Risk&apos;,&apos;Risk : the stream is identified as presenting a risk&apos;),
			IF(
				ESN_ActualStartDate__c &gt; today(),
				IF(
					ISPICKVAL(Status__c, &quot;Open&quot;),
					IMAGE(&apos;/resource/1368629827000/ProjectTab_InProgress&apos;,&apos;Stream in progress&apos;),
					IMAGE(&apos;/resource/ProjectTab_NotStarted&apos;,&apos;Not Started&apos;)
				),
				IF(
					today() &lt; ESN_ActualEndDate__c,
					IF(
						ISPICKVAL(Status__c, &quot;Open&quot;),
						IMAGE(&apos;/resource/1368629827000/ProjectTab_InProgress&apos;,&apos;Stream in progress&apos;),
						IMAGE(&apos;/resource/ProjectTab_Medium&apos;,&apos;Medum : Start date__c &lt; today and today &lt; End date__c and Status = &quot;Inactive&quot;&apos;)
					),
					IMAGE(&apos;/resource/ProjectTab_Risk&apos;,&apos;Risk : End date overtaken and stream not closed&apos;)
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SponsorEmailStream__c</fullName>
        <label>Sponsor email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Planned Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StreamLeaderEmail__c</fullName>
        <label>Stream leader email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StreamLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stream leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Train__c</fullName>
        <formula>IF( 
	ISBLANK(ParentStream__c ) , 
	HYPERLINK(&apos;/&apos;+ Project__r.Id,  Project__r.Name, &apos;_parent&apos;) 
		&amp; &apos; &gt;&gt; &apos; &amp;  Name , 	
	IF(
		ISBLANK( ParentStream__r.ParentStream__c ), 
		HYPERLINK(&apos;/&apos;+ Project__r.Id,  Project__r.Name, &apos;_parent&apos;) 
			&amp; &apos; &gt;&gt; &apos; &amp; HYPERLINK(&apos;/&apos;+ ParentStream__r.Id,  ParentStream__r.Name, &apos;_parent&apos;) 
			&amp; &apos; &gt;&gt; &apos; &amp; Name, 
		IF(
			ISBLANK( ParentStream__r.ParentStream__r.ParentStream__c ), 
			HYPERLINK(&apos;/&apos;+ Project__r.Id,  Project__r.Name, &apos;_parent&apos;) 
				&amp; &apos; &gt;&gt; &apos; &amp; HYPERLINK(&apos;/&apos;+ ParentStream__r.ParentStream__r.Id,  ParentStream__r.ParentStream__r.Name, &apos;_parent&apos;) 
				&amp; &apos; &gt;&gt; &apos; &amp; HYPERLINK(&apos;/&apos;+ ParentStream__r.Id,  ParentStream__r.Name, &apos;_parent&apos;) 
				&amp; &apos; &gt;&gt; &apos; &amp; Name,
			HYPERLINK(&apos;/&apos;+ Project__r.Id,  Project__r.Name, &apos;_parent&apos;) 
				&amp; &apos; &gt;&gt; &apos; &amp; HYPERLINK(&apos;/&apos;+ ParentStream__r.ParentStream__r.ParentStream__r.Id,  ParentStream__r.ParentStream__r.ParentStream__r.Name, &apos;_parent&apos;) 
				&amp; &apos; &gt;&gt; &apos; &amp; HYPERLINK(&apos;/&apos;+ ParentStream__r.ParentStream__r.Id,  ParentStream__r.ParentStream__r.Name, &apos;_parent&apos;) 
				&amp; &apos; &gt;&gt; &apos; &amp; HYPERLINK(&apos;/&apos;+ ParentStream__r.Id,  ParentStream__r.Name, &apos;_parent&apos;) 
				&amp; &apos; &gt;&gt; &apos; &amp; Name 
		)
	)
)</formula>
        <label>Train</label>
        <type>Text</type>
    </fields>
    <label>Stream</label>
    <listViews>
        <fullName>All_Milestones</fullName>
        <columns>NAME</columns>
        <columns>ESN_Type__c</columns>
        <columns>Project__c</columns>
        <columns>ParentStream__c</columns>
        <columns>ESN_ActualDeadline__c</columns>
        <columns>ESN_AtRisk__c</columns>
        <columns>ESN_SituationText__c</columns>
        <columns>Situation__c</columns>
        <columns>StreamLeader__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESNStream__c.ESN_Milestone</value>
        </filters>
        <label>All Milestones</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Streams</fullName>
        <columns>NAME</columns>
        <columns>ESN_Type__c</columns>
        <columns>Project__c</columns>
        <columns>ParentStream__c</columns>
        <columns>ESN_ActualStartDate__c</columns>
        <columns>ESN_ActualEndDate__c</columns>
        <columns>ESN_SituationText__c</columns>
        <columns>Situation__c</columns>
        <columns>StreamLeader__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESNStream__c.ESN_Stream</value>
        </filters>
        <label>All Streams</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Milestones</fullName>
        <columns>NAME</columns>
        <columns>ESN_Type__c</columns>
        <columns>Project__c</columns>
        <columns>ParentStream__c</columns>
        <columns>ESN_ActualDeadline__c</columns>
        <columns>ESN_AtRisk__c</columns>
        <columns>ESN_SituationText__c</columns>
        <columns>Situation__c</columns>
        <columns>StreamLeader__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESNStream__c.ESN_Milestone</value>
        </filters>
        <filters>
            <field>ESN_TECH_CurrentLeader__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Milestones</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Streams</fullName>
        <columns>NAME</columns>
        <columns>ESN_Type__c</columns>
        <columns>Project__c</columns>
        <columns>ParentStream__c</columns>
        <columns>ESN_ActualStartDate__c</columns>
        <columns>ESN_ActualEndDate__c</columns>
        <columns>ESN_SituationText__c</columns>
        <columns>Situation__c</columns>
        <columns>StreamLeader__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESNStream__c.ESN_Stream</value>
        </filters>
        <filters>
            <field>ESN_TECH_CurrentLeader__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Streams</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Stream Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Streams</pluralLabel>
    <recordTypes>
        <fullName>ESN_Milestone</fullName>
        <active>true</active>
        <description>Scheduled event that indicates the completion of a major deliverable event of a Project or Stream. Milestones are measurable and observable and serve as progress markers (flags) but, by definition, are independent of time (have zero durations).</description>
        <label>Milestone</label>
    </recordTypes>
    <recordTypes>
        <fullName>ESN_Stream</fullName>
        <active>true</active>
        <description>The work Stream is the progressive completion of Sub-Streams or Activities (Tasks and Event) completed by different groups within a company which are required to finish a Project.</description>
        <label>Stream</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>STR_VR01_EndDateValue</fullName>
        <active>false</active>
        <description>The stream Startdate Value can&apos;t be less than the Project Start date value</description>
        <errorConditionFormula>AND(NOT( $User.BypassVR__c), OR(EndDate__c  &gt;  Project__r.EndDate__c,  EndDate__c  &lt;  StartDate__c))</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>The Stream end date can&apos;t be greater than the project end date or less than the Stream Start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STR_VR02_StartDateValue</fullName>
        <active>false</active>
        <description>The stream Startdate Value can&apos;t be less than the Project Start date value</description>
        <errorConditionFormula>AND(NOT( $User.BypassVR__c), OR(StartDate__c  &lt;  Project__r.StartDate__c,  StartDate__c  &gt;  EndDate__c))</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>The Stream Start date can&apos;t be less than the project Start date or greater than the Stream End date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STR_VR03_Stream_ControlDate_WithProject</fullName>
        <active>true</active>
        <description>You cannot enter a Stream Start Date smaller than the Project Start Date or Stream End Date greater than the Project End Date. Please check and correct data.</description>
        <errorConditionFormula>AND(NOT( $User.BypassVR__c), NOT( RecordType.Name = &quot;Milestone&quot;), OR(ESN_ActualStartDate__c &lt; Project__r.ESN_ActualStartDate__c , ESN_ActualEndDate__c &gt; Project__r.ESN_ActualEndDate__c ))</errorConditionFormula>
        <errorMessage>You cannot enter a Stream Start Date smaller than the Project Start Date or Stream End Date greater than the Project End Date. Please check and correct data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STR_VR04_Stream_ControlDateConsistency</fullName>
        <active>true</active>
        <description>You cannot enter a Start Date greater that the End Date. Please check and correct data (either Planned Date or Actual Date).</description>
        <errorConditionFormula>AND(NOT( $User.BypassVR__c), NOT( RecordType.Name = &quot;Milestone&quot;), OR(StartDate__c &gt; EndDate__c, ESN_ActualStartDate__c &gt; ESN_ActualEndDate__c ))</errorConditionFormula>
        <errorMessage>You cannot enter a Start Date greater that the End Date. Please check and correct data (either Planned Date or Actual Date).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STR_VR05_Milest_ControlDate_WithProject</fullName>
        <active>true</active>
        <description>You cannot enter a Milestone Deadline outside the Project Period. Please check and correct data.</description>
        <errorConditionFormula>AND(NOT( $User.BypassVR__c), NOT( RecordType.Name = &quot;Stream&quot;), OR(ESN_ActualDeadline__c &lt; Project__r.ESN_ActualStartDate__c ,ESN_ActualDeadline__c &gt; Project__r.ESN_ActualEndDate__c))</errorConditionFormula>
        <errorMessage>You cannot enter a Milestone Deadline outside the Project Period. Please check and correct data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STR_VR06_Stream_ControlDate_WithParent</fullName>
        <active>true</active>
        <description>You cannot enter a Sub Stream Start Date smaller than the Parent Stream Start Date or Sub Stream End Date greater than the Parent Stream End Date. Please check and correct data.</description>
        <errorConditionFormula>AND(NOT( $User.BypassVR__c), NOT( RecordType.Name = &quot;Milestone&quot;), ParentStream__c != NULL, OR(ESN_ActualStartDate__c &lt; ParentStream__r.ESN_ActualStartDate__c , ESN_ActualEndDate__c &gt; ParentStream__r.ESN_ActualEndDate__c ))</errorConditionFormula>
        <errorMessage>You cannot enter a Sub Stream Start Date smaller than the Parent Stream Start Date or Sub Stream End Date greater than the Parent Stream End Date. Please check and correct data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STR_VR07_PlannedDateNotChange</fullName>
        <active>true</active>
        <description>You cannot modified Planned Start Date and Planned End Date after creation.</description>
        <errorConditionFormula>AND( 
	NOT( $User.BypassVR__c ) , 
	IF(
		RecordType.DeveloperName == &quot;ESN_Stream&quot;,
		AND( OR( ISCHANGED( StartDate__c ) , ISCHANGED( EndDate__c ),ISCHANGED( ESN_PlannedDeadline__c ) ), NOT(ISPICKVAL( Status__c , &quot;Inactive&quot;)) ),
		OR( ISCHANGED( StartDate__c ) , ISCHANGED( EndDate__c ),ISCHANGED( ESN_PlannedDeadline__c ) )
	)
)</errorConditionFormula>
        <errorMessage>You cannot modified either Planned Start Date or Planned End Date for a Stream or Planned Deadline for a Milestone after Status is ongoing or closed. Please contact your Administrator for more information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STR_VR08_Milest_ControlDate_WithParent</fullName>
        <active>true</active>
        <description>You cannot enter a Milestone Deadline outside the Parent Stream Period. Please check and correct data.</description>
        <errorConditionFormula>AND(NOT( $User.BypassVR__c), NOT( RecordType.Name = &quot;Stream&quot;), ParentStream__c !=NULL, OR(ESN_ActualDeadline__c &lt; ParentStream__r.ESN_ActualStartDate__c ,ESN_ActualDeadline__c &gt; ParentStream__r.ESN_ActualEndDate__c ))</errorConditionFormula>
        <errorMessage>You cannot enter a Milestone Deadline outside the Parent Stream Period. Please check and correct data.</errorMessage>
    </validationRules>
</CustomObject>